refactoring; added printouts for tracker; gradients for faster @ rpi

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,6 +165,13 @@ include_directories(
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
 
+## Mark other files for installation (e.g. launch and bag files, etc.)
+ install(FILES
+    launch/bodenseeDataset.launch 
+    config/bodenseeCamCalibResized.yaml
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+ )
+
 ## Mark executables and/or libraries for installation
 # install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
